--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   background: #24283b;
-  font-family: 'Jetbrains Mono', 'monospace';'
+  font-family: 'JetBrains Mono', 'monospace';
 }
 
 body {
@@ -45,7 +45,7 @@ nav a {
 
 h2 {
   color: #7dcfff;
-  padding: 0 0 30px 0;
+  padding: 0 0 20px 0;
 }
 
 p {
