fix: Font definition in stylesheet

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   background: #24283b;
-  font-family: 'JetBrains Mono', 'monospace';
+  font-family: 'JetBrains Mono', monospace;
 }
 
 body {
