--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,9 @@
   <article>
     <h1>{{ title }}</h1>
     <p><small>Published on {{ date }}</small></p>
+    {% if let Some(updated) = updated %}
+    <p><small>Last updated on {{ updated }}</small></p>
+    {% endif %}
     <div>{{ content|safe }}</div>
   </article>
 </main>
