--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Jonathan's Blog{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="icon" href="/static/imgs/favicon.ico">
+    <link rel="alternate" type="application/atom+xml" title="Atom" href="/feed">
 </head>
 <body>
 <header>
