--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Jonathan's Blog{% endblock %}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/static/css/style.css" />
     <link rel="icon" href="/static/imgs/favicon.ico" />
     <link
@@ -15,7 +21,7 @@
   </head>
   <body>
     <header>
-      <h1>Jonathan's Blog</h1>
+      <h1><a href="/">Jonathan's Blog</a></h1>
       <nav>
         <a href="/">Home</a>
         <a href="/about">About</a>
