--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
       <h1><a href="/">Jonathan's Blog</a></h1>
       <nav>
         <a href="/">Home</a>
+        <a href="/posts">Archive</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </nav>
