--- a/templates/partial/quote.html
+++ b/templates/partial/quote.html
@@ -1,4 +1,5 @@
 <article>
+  <p><small>Published on {{ post.date }}</small></p>
   <blockquote>
     {{ post.content }}
     <footer>{{ post.quote_author|display_some }}</footer>
