feat: add search
Added search functionality. The design is inspired by Simon Willison's
search on his blog.

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         <a href="/posts">Archive</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
+        <a href="/search">Search</a>
       </nav>
     </header>
     {% block content %} {% endblock %}
