feat: add build id for cache busting

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/static/css/style.css" />
-    <link rel="icon" href="/static/imgs/favicon.ico" />
+    <link rel="stylesheet" href="/static/css/style.css?{{ build_id }}" />
+    <link rel="icon" href="/static/imgs/favicon.ico?{{ build_id }}" />
     <link
       rel="alternate"
       type="application/atom+xml"
