--- a/templates/macros.html
+++ b/templates/macros.html
@@ -10,7 +10,7 @@
   <div class="tags">
       <span>Tags: </span>
       {% for tag in post.tags %}
-        <a href="/tag/{{ tag }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+        <a href="/search?q=tag%3A{{ tag | urlencode }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
       {% endfor %}
   </div>
   {% endif %}
@@ -31,7 +31,7 @@
   <div class="tags">
       <span>Tags: </span>
       {% for tag in post.tags %}
-        <a href="/tag/{{ tag }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+        <a href="/search?q=tag%3A{{ tag | urlencode }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
       {% endfor %}
   </div>
   {% endif %}
@@ -46,7 +46,7 @@
   <div class="tags">
       <span>Tags: </span>
       {% for tag in post.tags %}
-        <a href="/tag/{{ tag }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+        <a href="/search?q=tag%3A{{ tag | urlencode }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
       {% endfor %}
   </div>
   {% endif %}
