--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <main>
-  {{ macros::render_post(post=post, show_commits=true) }}
+  {{ macros::render_post(post=post, show_commits=true, show_related=true) }}
 </main>
 {% endblock %}
