fix(templates): update copyright year

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     {% block content %} {% endblock %}
 
     <footer>
-      <p>&copy; 2024</p>
+      <p>&copy; 2022-2025</p>
     </footer>
   </body>
 </html>
