--- a/templates/macros.html
+++ b/templates/macros.html
@@ -97,27 +97,37 @@
   <br>
   <section class="related-posts">
     <h3>Related Posts</h3>
-    <ul class="summary-list">
-      {% for related_post in post.related_posts %}
-        {{ macros::summary_item(post=related_post) }}
-      {% endfor %}
-    </ul>
+    {{ self::summary_list(summaries=related_posts) }}
   </section>
   {% endif %}
 {% endmacro render_post %}
 
+{% macro summary_list(summaries) %}
+  <ul class="summary-list">
+    {% for post in posts %}
+      {{ self::summary_item(post=post) }}
+    {% endfor %}
+  </ul>
+{% endmacro summary_list %}
+
 {% macro summary_item(post) %}
   <li class="summary-item">
-    <span class="summary-date">{{ post.date }}</span>
-    <span class="summary-title">
-      {% if post.content_type == "Post" %}
-        <a href="/post/{{ post.id }}">{{ post.title | default(value="Untitled Post") }}</a>
-      {% elif post.content_type == "Link" %}
-        <a href="{{ post.link | default(value="#") }}">{% if post.title %}{{ post.title }}{% else %}{{ post.link }}{% endif %}</a>
-        (<a href="/post/{{ post.id }}">permalink</a>)
-      {% elif post.content_type == "Quote" %}
-        <a href="/post/{{ post.id }}">Quote from {{ post.quote_author | default(value="Unknown") }}</a>
+    <div class="summary-title">
+      {% if post.content_type == 'link' %}
+        <a href="{{ post.link | safe }}">{{ post.title | default(value="Link") }} &rarr;</a>
+      {% else %}
+        <a href="/post/{{ post.id }}">{{ post.title | default(value="Untitled") }}</a>
       {% endif %}
-    </span>
+    </div>
+    <div class="summary-post-meta">
+      <time datetime="{{ post.date }}">{{ post.date }}</time>
+      &middot; <a href="/post/{{ post.id }}">permalink</a>
+      {% if post.content_type == 'quote' and post.quote_author %}
+        &middot; from {{ post.quote_author }}
+      {% endif %}
+      {% if post.via %}
+        &middot; (<a href="{{ post.via | safe }}">via</a>)
+      {% endif %}
+    </div>
   </li>
 {% endmacro summary_item %}
